includedir = $(prefix)/include/libiodefv2

include_HEADERS = common.h			\
		  iodefv2.h			\
		  iodefv2-additional-data.h	\
		  iodefv2-class.h			\
		  iodefv2-criteria.h		\
		  iodefv2-criterion-value.h	\
		  iodefv2-data.h			\
		  iodefv2-document-helpers.h	\
		  iodefv2-document-id.h		\
		  iodefv2-document-print.h		\
		  iodefv2-document-write.h		\
		  iodefv2-document-print-json.h		\
		  iodefv2-object.h		\
		  iodefv2-path.h			\
		  iodefv2-time.h			\
		  iodefv2-tree-data.h		\
		  iodefv2-tree-wrap.h		\
		  iodefv2-value.h			\
		  iodefv2-value-type.h		\
		  libiodefv2-extract.h		\
		  libiodefv2-hash.h		\
		  libiodefv2-linked-object.h	\
		  libiodefv2-list.h		\
		  libiodefv2-log.h			\
		  libiodefv2-failover.h		\
		  libiodefv2-ident.h		\
		  libiodefv2-io.h			\
		  libiodefv2-macros.h		\
		  libiodefv2-document-id.h		\
		  libiodefv2-string.h

nodist_include_HEADERS = libiodefv2-inttypes.h

noinst_HEADERS = iodefv2-object-prv.h libmissing.h iodefv2-tree-data.h variable.h ntp.h

-include $(top_srcdir)/git.mk
